solutions/8_Ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: training-app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: kubernetestraining.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: training-app-service
            port:
              number: 80
